# tonewinner-rs232

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yaml  publish.yaml  test.yaml
src/tonewinner_rs232/: __init__.py  __main__.py  const.py  protocol.py  receiver.py  state.py
tests/: __init__.py  conftest.py  test_tonewinner_rs232.py
