[project]
name = "tonewinner-rs232"
version = "0.1.0"
description = "Async Python library for Tonewinner AV processors over RS232 serial"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "serialx>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
]

[project.scripts]
tonewinner-rs232 = "tonewinner_rs232.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tonewinner_rs232"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 5
testpaths = ["tests"]
